package biz

import (
	"context"
	"errors"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strconv"
	"strings"
	"time"

	"github.com/PuerkitoBio/goquery"
	"github.com/asynccnu/ccnubox-be/be-class/internal/model"
	"github.com/asynccnu/ccnubox-be/be-class/internal/service"
	proxyv1 "github.com/asynccnu/ccnubox-be/common/api/gen/proto/proxy/v1"
	"github.com/go-kratos/kratos/v2/log"
	"github.com/robfig/cron/v3"
	"gorm.io/gorm"
)

const (
	identity = "ä¸ªæ€§å‘å±•è¯¾ç¨‹"
	common   = "é€šè¯†æ•™è‚²è¯¾ç¨‹"
	specific = "ä¸“ä¸šä¸»å¹²è¯¾ç¨‹"

	new_ = "new"
)

var (
	courseURL         = "https://bkzhjw.ccnu.edu.cn/jsxsd/pyfa/topyfamx"
	classTypes        = []string{identity, common, specific}
	ErrRecordNotFound = gorm.ErrRecordNotFound
)

// yearTermMapper ç¬¬ä¸€ç±»æƒ…å†µæ˜ å°„
var yearTermMapper = map[string]string{
	"1":  "ç¬¬ä¸€å­¦å¹´ç¬¬ä¸€å­¦æœŸ",
	"2":  "ç¬¬ä¸€å­¦å¹´ç¬¬äºŒå­¦æœŸ",
	"3":  "ç¬¬ä¸€å­¦å¹´ç¬¬ä¸‰å­¦æœŸ",
	"4":  "ç¬¬äºŒå­¦å¹´ç¬¬ä¸€å­¦æœŸ",
	"5":  "ç¬¬äºŒå­¦å¹´ç¬¬äºŒå­¦æœŸ",
	"6":  "ç¬¬äºŒå­¦å¹´ç¬¬ä¸‰å­¦æœŸ",
	"7":  "ç¬¬ä¸‰å­¦å¹´ç¬¬ä¸€å­¦æœŸ",
	"8":  "ç¬¬ä¸‰å­¦å¹´ç¬¬äºŒå­¦æœŸ",
	"9":  "ç¬¬ä¸‰å­¦å¹´ç¬¬ä¸‰å­¦æœŸ",
	"10": "ç¬¬å››å­¦å¹´ç¬¬ä¸€å­¦æœŸ",
	"11": "ç¬¬å››å­¦å¹´ç¬¬äºŒå­¦æœŸ",
	"12": "ç¬¬å››å­¦å¹´ç¬¬ä¸‰å­¦æœŸ",
}

// yearTermMapper2 ç¬¬äºŒç±»æƒ…å†µæ˜ å°„
var yearTermMapper2 = map[string]string{
	"0-1": "1",
	"0-2": "2",
	"0-3": "3",
	"1-1": "4",
	"1-2": "5",
	"1-3": "6",
	"2-1": "7",
	"2-2": "8",
	"2-3": "9",
	"3-1": "10",
	"3-2": "11",
	"3-3": "12",
}

var classMapper = map[string]string{
	identity: "0",
	common:   "1",
	specific: "2",
}

type CultivateStrategyData interface {
	BatchSaveToBeStudiedClass(ctx context.Context, relations []model.UnStudiedClassStudentRelationship, classes []model.ToBeStudiedClass) error
	GetClassStudentRelation(ctx context.Context, stuId, status string, alive time.Duration) ([]model.UnStudiedClassStudentRelationship, error)
	GetDetailUnStudyClass(ctx context.Context, id string) (model.ToBeStudiedClass, error)

	DataAlive() time.Duration
}

type CultivateStrategyBiz struct {
	proxyCli  proxyv1.ProxyClient
	httpCli   *http.Client
	cookieCli CookieClient
	csData    CultivateStrategyData
	cache     Cache
}

func NewCultivateStrategyBiz(cookieCli CookieClient, cache Cache, csData CultivateStrategyData, proxyCli proxyv1.ProxyClient) service.CultivateStrategy {
	httpCli := &http.Client{
		Transport: &http.Transport{
			MaxIdleConns:        100,              // æœ€å¤§ç©ºé—²è¿æ¥
			IdleConnTimeout:     90 * time.Second, // ç©ºé—²è¿æ¥è¶…æ—¶
			MaxIdleConnsPerHost: 20,               // æ¯ä¸ªä¸»æœºæœ€å¤§ç©ºé—²è¿æ¥
		},
	}

	c := &CultivateStrategyBiz{
		cookieCli: cookieCli,
		httpCli:   httpCli,
		cache:     cache,
		csData:    csData,
		proxyCli:  proxyCli,
	}

	c.pullProxy()
	beginCultivateStrategyBizCronTask(c)
	return c
}

func (c *CultivateStrategyBiz) pullProxy() {
	res, err := c.proxyCli.GetProxyAddr(context.Background(), &proxyv1.GetProxyAddrRequest{})
	if err != nil {
		log.Error("GetProxyAddr in pull proxy err:", err)
		res = &proxyv1.GetProxyAddrResponse{Addr: ""}
	}
	proxy, err := url.Parse(res.Addr)
	if err != nil {
		log.Error("parse proxy in pull proxy addr err:", err)
	}

	c.httpCli.Transport.(*http.Transport).Proxy = http.ProxyURL(proxy)
	log.Debug("pull proxy addr success, now: ", time.Now())
}

func beginCultivateStrategyBizCronTask(c *CultivateStrategyBiz) {
	cr := cron.New()
	_, _ = cr.AddFunc("@every 160s", c.pullProxy)
	cr.Start()
}

func (c *CultivateStrategyBiz) GetToBeStudiedClass(ctx context.Context, stuId, status string) (service.ToBeStudiedClasses, error) {
	var (
		res     service.ToBeStudiedClasses
		er, err error
	)
	// ä¼˜å…ˆä½¿ç”¨æ•°æ®åº“çš„æ–°æ•°æ®
	log.Debug("Trying to get fresh unstudied classes from DB")
	res, err = c.GetCultivateStrategyFromDB(ctx, stuId, status, c.csData.DataAlive())
	if err == nil {
		return res, nil
	}

	log.Debug("No fresh unstudied classes from DB, try crawl from ccnu")
	// å¦‚æœæ•°æ®åº“é‡Œé¢æ²¡æœ‰, å»çˆ¬æ•°æ®, ç„¶åæ›´æ–°
	if errors.Is(err, ErrRecordNotFound) {
		res, er = c.GetCultivateStrategyFromCCNU(ctx, stuId)
		if er == nil {
			resCopy := res
			go func(classes service.ToBeStudiedClasses) {
				ctx, cancel := context.WithTimeout(context.Background(), 3*time.Second)
				defer cancel()
				if err := c.SaveClassesAndRelationsToDB(ctx, stuId, &resCopy); err != nil {
					// TODO log
					fmt.Printf("gouroutine save err: %+v\n", err)
				}
			}(resCopy)

			// å¦‚æœæ˜¯postçš„ç­›é€‰, è¿™é‡Œå¯¹çˆ¬è™«æ•°æ®è¿›è¡Œå¤„ç†
			if status != "" {
				resp := findClassesByStatusFromRes(status, res)
				return resp, nil
			}

			return res, nil
		}
		log.Error("Get unstudied classes from CCNU err: ", er)
	}

	// å¦‚æœæ²¡æœ‰æ–°æ•°æ® + çˆ¬è™«æ²¡çˆ¬åˆ°æ•°æ®, å»æŸ¥çœ‹æ—§æ•°æ®
	res, err = c.GetCultivateStrategyFromDB(ctx, stuId, status, -1)
	if err == nil {
		return res, nil
	}

	log.Warn("No old unstudied classes from DB")
	return service.ToBeStudiedClasses{}, err
}

// aggregateToService æŠŠæ•°æ®åº“æ¨¡å‹è½¬æ¢æˆé¢†åŸŸæ¨¡å‹, ä½†æ˜¯æ„Ÿè§‰dataå±‚æœ‰æ›´å¥½çš„å¤„ç†æ–¹æ³• TODO
func aggregateToService(r model.UnStudiedClassStudentRelationship, c model.ToBeStudiedClass) service.ToBeStudiedClass {
	return service.ToBeStudiedClass{
		Id:        c.Id,
		Name:      c.Name,
		Status:    r.Status,
		Property:  c.Property,
		Studiable: c.Studiable,
		Credit:    c.Credit,
		Type:      c.Type,
	}
}

// SaveClassesAndRelationsToDB å°†çˆ¬è™«ç»“æœå­˜å…¥æ•°æ®åº“
func (c *CultivateStrategyBiz) SaveClassesAndRelationsToDB(ctx context.Context, stuId string, res *service.ToBeStudiedClasses) error {
	classes, relations := resToModels(stuId, res)
	return c.csData.BatchSaveToBeStudiedClass(ctx, relations, classes)
}

// resToModels å°†çˆ¬è™«ç»“æœè½¬æ¢ä¸ºæ•°æ®åº“æ¨¡å‹
func resToModels(stuId string, res *service.ToBeStudiedClasses) ([]model.ToBeStudiedClass, []model.UnStudiedClassStudentRelationship) {
	classes := joinClasses(res)

	return separateClass(stuId, classes)
}

// joinClasses å› ä¸ºçˆ¬è™«ç»“æœåˆ†ä¸‰ä¸ªç›¸åŒåˆ‡ç‰‡çš„å­—æ®µ, è¿™é‡Œè¦èšåˆä¸€ä¸‹
func joinClasses(res *service.ToBeStudiedClasses) []service.ToBeStudiedClass {
	var classes []service.ToBeStudiedClass
	classes = append(classes, res.IdentityDevelop...)
	classes = append(classes, res.CommonEducate...)
	classes = append(classes, res.SpecificSkill...)
	return classes
}

// separateClass æŠŠçˆ¬è™«ç»“æœæ¯ä¸ªå­—æ®µçš„åˆ‡ç‰‡å¤„ç†æˆæ•°æ®åº“æ¨¡å‹
func separateClass(stuId string, classes []service.ToBeStudiedClass) ([]model.ToBeStudiedClass, []model.UnStudiedClassStudentRelationship) {
	var (
		mcs []model.ToBeStudiedClass
		mrs []model.UnStudiedClassStudentRelationship
	)

	for _, c := range classes {
		mcs = append(mcs, classToModel(&c))
		mrs = append(mrs, classToRelation(stuId, &c))
	}

	return mcs, mrs
}

func classToModel(c *service.ToBeStudiedClass) model.ToBeStudiedClass {
	return model.ToBeStudiedClass{
		Id:        c.Id,
		Name:      c.Name,
		Property:  c.Property,
		Studiable: c.Studiable,
		Credit:    c.Credit,
		Type:      c.Type,
	}
}

func classToRelation(stuId string, c *service.ToBeStudiedClass) model.UnStudiedClassStudentRelationship {
	return model.UnStudiedClassStudentRelationship{
		StudentId:          stuId,
		ToBeStudiedClassId: c.Id,
		Status:             c.Status,
	}
}

// distinguishByClassType çˆ¬è™«ç»“æœåªæœ‰ä¸€ä¸ªåˆ‡ç‰‡, æ ¹æ®è¯¾ç¨‹ç±»å‹è¿›è¡Œæ”¾å…¥ä¸åŒçš„å­—æ®µåˆ‡ç‰‡
func distinguishByClassType(classes []service.ToBeStudiedClass) service.ToBeStudiedClasses {
	var res service.ToBeStudiedClasses
	m := map[string]*[]service.ToBeStudiedClass{
		"0": &res.IdentityDevelop,
		"1": &res.CommonEducate,
		"2": &res.SpecificSkill,
	}

	for _, class := range classes {
		*m[class.Type] = append(*m[class.Type], class)
	}

	return res
}

func (c *CultivateStrategyBiz) GetCultivateStrategyFromCCNU(ctx context.Context, stuId string) (service.ToBeStudiedClasses, error) {
	cookie, err := c.cookieCli.GetCookie(ctx, stuId, new_)
	if err != nil {
		return service.ToBeStudiedClasses{}, err
	}

	req, err := http.NewRequest(http.MethodGet, courseURL, nil)
	if err != nil {
		return service.ToBeStudiedClasses{}, err
	}

	req.Header = http.Header{
		"Cookie":       []string{cookie},
		"User-Agent":   []string{"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/140.0.0.0 Safari/537.36 Edg/140.0.0.0"},
		"Content-Type": []string{"application/x-www-form-urlencoded;charset=UTF-8"},
	}

	resp, err := c.httpCli.Do(req)
	if err != nil {
		return service.ToBeStudiedClasses{}, err
	}
	defer func() { _ = resp.Body.Close() }()

	res, err := extractUnstudiedClasses(resp.Body, stuId)
	if err != nil {
		return service.ToBeStudiedClasses{}, err
	}

	return res, nil
}

func (c *CultivateStrategyBiz) GetCultivateStrategyFromDB(ctx context.Context, stuId string,
	status string, dataAlive time.Duration) (service.ToBeStudiedClasses, error) {
	relations, err := c.csData.GetClassStudentRelation(ctx, stuId, status, dataAlive)
	if err != nil {
		return service.ToBeStudiedClasses{}, err
	}

	classes := make([]service.ToBeStudiedClass, len(relations))

	// æ‰¾åˆ°ç„¶åèšåˆ
	for i, relation := range relations {
		class, err := c.csData.GetDetailUnStudyClass(ctx, relation.ToBeStudiedClassId)
		if err != nil {
			return service.ToBeStudiedClasses{}, err
		}
		classes[i] = aggregateToService(relation, class)
	}

	res := distinguishByClassType(classes)

	return res, nil
}

// extractUnstudiedClasses ä»å“åº”æå–è¯¾ç¨‹
func extractUnstudiedClasses(rd io.Reader, stuId string) (service.ToBeStudiedClasses, error) {
	var (
		res       service.ToBeStudiedClasses
		classType string
		class     []string
		m         = make(map[string]struct{})
	)
	doc, err := goquery.NewDocumentFromReader(rd)
	if err != nil {
		return service.ToBeStudiedClasses{}, err
	}

	doc.Find("tr.tr-data").Each(func(i int, s *goquery.Selection) {
		if sel := s.Find("td[colspan]"); sel.Length() != 0 && isInClassTypes(sel.Text()) {
			classType = strings.TrimSpace(sel.Text())
		}

		if s.Find("td").Length() == 14 {
			class = s.Find("td").Map(func(i int, s *goquery.Selection) string {
				return strings.Join(strings.Fields(s.Text()), " ")
			})
		}

		if len(class) != 0 {
			if _, ok := m[class[1]]; !ok {
				dispatchClass(class, classType, &res, stuId)
				m[class[1]] = struct{}{}
			}
		}
	})

	return res, nil
}

// isInClassTypes è¿™é‡Œéœ€è¦è¿‡æ»¤ä¸€ä¸‹title, é€šè¯†è¯¾ä¸‹é¢æœ‰ä¸€å †åˆ†ç±», ä¸ºäº†ç®€ä¾¿åªç”¨å¤§ç±»
func isInClassTypes(c string) bool {
	for _, v := range classTypes {
		if strings.Contains(c, v) {
			return true
		}
	}
	return false
}

// dispatchClass å“ªç±»è¯¾ç¨‹æ”¾å“ªç±»åˆ‡ç‰‡
func dispatchClass(class []string, classType string, studiedClass *service.ToBeStudiedClasses, stuId string) {
	if len(class) == 0 {
		return
	}
	cls := classToService(class, stuId)
	m := map[string]*[]service.ToBeStudiedClass{
		identity: &studiedClass.IdentityDevelop,
		common:   &studiedClass.CommonEducate,
		specific: &studiedClass.SpecificSkill,
	}

	for tpe, classList := range m {
		if strings.Contains(classType, tpe) {
			extraModifyType(cls, tpe)
			*classList = append(*classList, *cls)
			return
		}
	}
}

func classToService(class []string, stuId string) *service.ToBeStudiedClass {
	return &service.ToBeStudiedClass{
		Id:        class[1],
		Name:      class[2],
		Status:    class[3],
		Property:  class[4],
		Credit:    class[6],
		Studiable: betterStudiable(class[13], stuId),
	}
}

// extraModifyType ç”¨äºå­˜å‚¨åœ¨æ•°æ®åº“, postç­›é€‰çš„æ—¶å€™æœ‰ç”¨
func extraModifyType(c *service.ToBeStudiedClass, tpe string) {
	c.Type = classMapper[tpe]
}

// betterStudiable ä½ å¸ˆçš„ç¥ç§˜å­¦æœŸæ•°å­—ğŸ˜†
func betterStudiable(s string, stuId string) string {
	// 1, 2, ... 12
	if v, ok := yearTermMapper[s]; ok {
		return v
	}

	// 2024-2025-1
	if yearTerm := strings.Split(s, "-"); len(yearTerm) == 3 {
		begin := stuId[:4]

		intYear, _ := strconv.Atoi(yearTerm[0])
		intBegin, _ := strconv.Atoi(begin)
		yearTermFinal := fmt.Sprintf("%d-%s", intYear-intBegin, yearTerm[2]) //0/1/2/3-1/2/3
		if v, ok := yearTermMapper[yearTermMapper2[yearTermFinal]]; ok {
			return v
		}
	}

	return s
}

// findClassesByStatusFromRes åœ¨post+çˆ¬è™«å“åº”çš„æ—¶å€™ä½¿ç”¨
func findClassesByStatusFromRes(status string, res service.ToBeStudiedClasses) service.ToBeStudiedClasses {
	return service.ToBeStudiedClasses{
		IdentityDevelop: findClassesByStatus(status, res.IdentityDevelop),
		CommonEducate:   findClassesByStatus(status, res.CommonEducate),
		SpecificSkill:   findClassesByStatus(status, res.SpecificSkill),
	}
}

func findClassesByStatus(status string, classes []service.ToBeStudiedClass) []service.ToBeStudiedClass {
	var result []service.ToBeStudiedClass
	for _, class := range classes {
		if class.Status == status {
			result = append(result, class)
		}
	}

	return result
}
